# fft-image-processor

./: CMakeLists.txt  License  README.md  main.cpp  run_gui.sh  setup_dependencies.sh
assets/fonts/: README.txt
include/: Complex.h  GUI.h  GUI.h.backup.20250605_221014  ImageProcessor.h  OpenGLRenderer.h
src/: GUI.cpp  GUI.cpp.backup.20250605_221014  GUI.cpp.font_backup  GUI_simple.cpp  ImageProcessor.cpp  OpenGLRenderer.cpp  embedded_font.h  font_loader.cpp
